--- a/4 century/index.html
+++ b/4 century/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="FirstUpperSymbol.js"> </script>
+  <script src="ReturnCentury.js"> </script>
 </body>
 </html>
