add: task 6, 6_stringToNumber

--- a/5 NumberToString/index.html
+++ b/5 NumberToString/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="NumberToString.js"> </script>
+  <script src="stringToNumber.js"> </script>
 </body>
 </html>
